updated gallery and contact us content

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="col-md-6 col-sm-6 col-xs-12 customized-text wow fadeInDown black-ed">
-				<p>As one of Aluva's top detailers right now, we offer everything from basic car washing to luxurious detailing that includes denting and painting. We are dedicated to providing exceptional service at an affordable price with the assistance of competent specialists. Our services have the following qualities.</p>
+				<p>As one of Aluva's top detailerz right now, we offer everything from basic car washing to luxurious detailing that includes denting and painting. We are dedicated to providing exceptional service at an affordable price with the assistance of competent specialists. Our services have the following qualities.</p>
                     <div class="row"> 
                         <div class="col-md-11">
                             <strong>Perfection and Quality</strong>
@@ -241,7 +241,7 @@
                 <div class="col-md-12 col-sm-12 col-xs-12 section-header wow fadeInDown">
                     <h2><span class="highlight-text">Gallery</span></h2>
                    
-                    <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, nam corporis quas, saepe minima error aperiam dolorum aliquam, quis deserunt eos eius quisquam odio itaque.</p>
+                    <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">Customers are satisfied when results are excellent. Look at some of our professional works and the calibre they exhibit.You'll adore it, we're certain.</p>
                 </div>
                 <!-- Section Header End -->
 
@@ -411,7 +411,7 @@
               <div class="col-md-12 col-sm-12 col-xs-12 section-header wow fadeInDown">
                     <h2><span class="highlight-text">Contact Us</span></h2>
                    
-                    <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">We love feedback. Fill out the form below and we'll get back to you as soon as possible. in minus distinctio dolores ipsam.</p>
+                    <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">We adore hearing from our customers. We will contact you as soon as we can after you complete the form below.</p>
                 </div> 
                 <!-- Section Header End -->
 
