footer content updated

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 <div class="col-md-4">
 				<img src="images/logo3.png" alt="">
                   <p> </p>
-                 <p>Being a leading auto detailerz in Aluva gives expert, first-rate service with a satisfaction guarantee. Let's brighten your car !!!
+                 <p>Being a leading automobile detailerz in Aluva gives expert, first-rate service with a satisfaction guarantee. Let's brighten your car !!!
 </p>
                 </div>
                 <div class="col-md-4">
