--- a/index.html
+++ b/index.html
@@ -411,11 +411,11 @@
 </p>
                 </div>
                 <div class="col-md-4">
-                    <h4>Services</h4>
+                    <h4>SERVICES</h4>
                     <p>Basic Washing, Shampoo Washing, Interior and Exterior Cleaning and Detailing, Wax Polishing, Ceramic Coating, Denting and Scracth fixing, Roof coating, Spray painting and more</p>
                 </div>
                 <div class="col-md-4 contac-us">
-                    <h4>Contact</h4>
+                    <h4>CONTACT US</h4>
                     <p>Connect to use our services to make your car shine</p>
 					<ul>
                             <li><i class="fa fa-home"></i>Velanparambu Road, Pravoor Kavala, Aluva</li>
