--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
    <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Businnes, Portfolio, Corporate"> 
+    <meta name="description" content="Being a leading automobile detailerz we give expert, first-rate service with a satisfaction guarantee. Let's brighten your car !!!"> 
+	<meta name="keywords" content="Car Detailerz, Car Washing, Car Polishing, Auto Bright Detailerz, autobrightdetilerz.com, shampoo washing, ceramic coating, painting, Denting">
 	<meta name="Author" content="WebThemez"> 
     <title>Auto Bright Detailerz</title>
+	<link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
@@ -191,7 +193,7 @@ To get a vehicle in the best condition it can be in, an extensive process called
                             <div class="icon"> <h3>Polishing</h3>
                             </div>
                             
-                            <p>Applying wax and polish materials to your car to make it shine</p>
+                            <p>Applying high quality wax and polish materials to your car to make it shine</p>
                         </div>
 </div>
                      
