--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img class="sp-image" src="images/slider/slider-img-1.jpg" alt="Slider 2"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">Make Your Car Look As Good As New</span>
+                <span class="highlight-texts">Professional Car Detailing</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -87,7 +87,7 @@
                 <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 1"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">Interior & Exterior Detailing</span>
+                <span class="highlight-texts">Car Wash & Cleaning</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -99,7 +99,7 @@
                 <img class="sp-image" src="images/slider/slider-img-3.jpg" alt="Slider 3"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">High-Quality Ceramic Coating</span>
+                <span class="highlight-texts">Ceramic Coating | Paint Protection</span>
                 </h1> 
             </div>
             <!-- Slides End -->
