update slider image

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ To get a vehicle in the best condition it can be in, an extensive process called
                 </div>
                 <div class="col-md-4">
                     <h4>SERVICES</h4>
-                    <p>Water service, shampoo wash, interior cleaning, glass polishing, waxing & polishing, professional detailing, dent and scratch repair, ceramic coating, paint protection, roof painting, clear coating, spray painting, and more....</p>
+                    <p>Water service, shampoo wash, interior cleaning, glass polishing, waxing & polishing,car detailing, dent and scratch repair, ceramic coating, paint protection, roof painting, clear coating, spray painting, and more....</p>
                 </div>
                 <div class="col-md-4 contac-us">
                     <h4>CONTACT US</h4>
