--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img class="sp-image" src="images/slider/slider-img-1.jpg" alt="Slider 2"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">Professional Car Detailing</span>
+                <span class="highlight-texts">PROFESSIONAL DETAILING</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -87,7 +87,7 @@
                 <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 1"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">Car Wash & Cleaning</span>
+                <span class="highlight-texts">CERAMIC PAINT PROTECTION</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -99,7 +99,7 @@
                 <img class="sp-image" src="images/slider/slider-img-3.jpg" alt="Slider 3"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">Premium Ceramic Coating</span>
+                <span class="highlight-texts">DENTING & PAINTING</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -162,7 +162,7 @@
                     <h2><span class="highlight-text">Services</span></h2>
                    
                     <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">
-To get a vehicle in the best condition it can be in, an extensive process called detailing is used.Our services are categorised into many levels so that consumers can choose from them.</p>
+To get a vehicle in the best condition it can be in, an extensive process called detailing is used.Our detailing service is categorised into many levels so that consumers can choose from them.</p>
                 </div>
                 <!-- Section Header End -->
  
