--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 1"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">CERAMIC PAINT PROTECTION</span>
+                <span class="highlight-texts">PAINT CORRECTION & POLISHING</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -99,7 +99,7 @@
                 <img class="sp-image" src="images/slider/slider-img-3.jpg" alt="Slider 3"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">DENTING & PAINTING</span>
+                <span class="highlight-texts">CERAMIC PAINT PROTECTION</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -416,7 +416,7 @@ To get a vehicle in the best condition it can be in, an extensive process called
                 </div>
                 <div class="col-md-4">
                     <h4>SERVICES</h4>
-                    <p>Water service, shampoo wash, interior cleaning, glass polishing, waxing & polishing,car detailing, dent and scratch repair, ceramic coating, paint protection, roof painting, clear coating, spray painting, and more....</p>
+                    <p>Water service, shampoo wash, interior cleaning, glass polishing, waxing & polishing,car detailing, dent and scratch repair, ceramic coating, paint correction, paint protection, roof painting, clear coating, spray painting, and more....</p>
                 </div>
                 <div class="col-md-4 contac-us">
                     <h4>CONTACT US</h4>
