--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
                 <img class="sp-image" src="images/slider/slider-img-1.jpg" alt="Slider 2"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">PROFESSIONAL CAR DETAILING</span>
+                <span class="highlight-texts">LET'S GIVE YOUR CAR A NEW MAKE OVER</span>
+                </h1> 
+            </div>
+            <!-- Slides End -->
+			
+				
+            <!-- Slides -->
+            <div class="sp-slide main-slides">
+                <div class="img-overlay"></div> 
+                <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 1"/> 
+                <h1 class="sp-layer slider-text-big"
+                data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
+                <span class="highlight-texts">PROFESSIONAL CAR WASH & DETAILING</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -87,7 +99,7 @@
                 <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 1"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">PAINT CORRECTION & POLISHING</span>
+                <span class="highlight-texts">DENT REPAIR | PAINT CORRECTION | POLISHING</span>
                 </h1> 
             </div>
             <!-- Slides End -->
