--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 1"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">DENT REPAIR | PAINT CORRECTION | POLISHING</span>
+                <span class="highlight-texts">DENT REPAIR, PAINT CORRECTION & POLISHING</span>
                 </h1> 
             </div>
             <!-- Slides End -->
