--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img class="sp-image" src="images/slider/slider-img-1.jpg" alt="Slider 1"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">LET'S GIVE YOUR CAR A NEW MAKE OVER</span>
+                <span class="highlight-texts">FACELIFT YOUR CAR TO NEW LOOK</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -96,10 +96,10 @@
             <!-- Slides -->
             <div class="sp-slide main-slides">
                 <div class="img-overlay"></div> 
-                <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 3"/> 
+                <img class="sp-image" src="images/slider/slider-img-3.jpg" alt="Slider 3"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">DENT REPAIR, PAINT CORRECTION & POLISHING</span>
+                <span class="highlight-texts">PAINT CORRECTION & POLISHING</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -108,7 +108,7 @@
             <!-- Slides -->
             <div class="sp-slide main-slides">
                 <div class="img-overlay"></div> 
-                <img class="sp-image" src="images/slider/slider-img-3.jpg" alt="Slider 4"/> 
+                <img class="sp-image" src="images/slider/slider-img-4.jpg" alt="Slider 4"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
                 <span class="highlight-texts">CERAMIC PAINT PROTECTION</span>
