transparent background for heading

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img class="sp-image" src="images/slider/slider-img-1.jpg" alt="Slider 1"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">FACELIFT YOUR CAR TO NEW LOOK</span>
+                <span class="highlight-texts">Facelift your Car to New Look</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -88,7 +88,7 @@
                 <img class="sp-image" src="images/slider/slider-img-2.jpg" alt="Slider 2"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">PROFESSIONAL CAR WASH & DETAILING</span>
+                <span class="highlight-texts">Professional Car Wash and Detailing</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -99,7 +99,7 @@
                 <img class="sp-image" src="images/slider/slider-img-3.jpg" alt="Slider 3"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">PAINT CORRECTION & POLISHING</span>
+                <span class="highlight-texts">Paint Correction and Polishing</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -111,7 +111,7 @@
                 <img class="sp-image" src="images/slider/slider-img-4.jpg" alt="Slider 4"/> 
                 <h1 class="sp-layer slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-vertical="55%" data-show-delay="1500" data-hide-delay="200">
-                <span class="highlight-texts">CERAMIC PAINT PROTECTION</span>
+                <span class="highlight-texts">Ceramic Paint Protection</span>
                 </h1> 
             </div>
             <!-- Slides End -->
@@ -138,7 +138,7 @@
 
                 <div class="col-md-6 col-sm-6 col-xs-12 customized-text wow fadeInDown black-ed">
 				<p></p>
-				<p>As one of the top automobile detailerz, we do everything from straightforward car washing to opulent detailing that includes denting and painting. We are committed to offering top-notch service at a fair price with the assistance of competent specialists. Our services are featured with </p>
+				<p>As one of the top automobile detailerz, we do everything from straightforward car washing to opulent detailing that includes dent repair and painting. We are committed to offering top-notch service at a fair price with the assistance of competent specialists. Our services are featured with </p>
                     <div class="row"> 
                         <div class="col-md-11">
                             <strong>Perfection and Quality</strong>
