--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Being a leading automobile detailerz we give expert, first-rate service with a satisfaction guarantee. Let's brighten your car !!!"> 
 	<meta name="keywords" content="Car Detailerz, Car Washing, Car Polishing, AutoBright Detailerz, autobrightdetilerz.com, shampoo washing, ceramic coating, painting, Denting">
 	<meta name="Author" content="WebThemez"> 
-    <title>AutoBright Detailerz</title>
+    <title>AutoBright Detailerz | Professional Car Wash & Detailing</title>
 	<link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
