--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Being a leading automobile detailerz we give expert, first-rate service with a satisfaction guarantee. Let's brighten your car !!!"> 
+    <meta name="description" content="As one of the top automobile detailerz, we do everything from straightforward car washing to opulent detailing that includes dent repair and painting. Let's brighten your car !!!"> 
 	<meta name="keywords" content="Car Detailerz, Car Washing, Car Polishing, AutoBright Detailerz, autobrightdetilerz.com, shampoo washing, ceramic coating, painting, Denting">
 	<meta name="Author" content="WebThemez"> 
     <title>AutoBright Detailerz | Professional Car Wash & Detailing</title>
