--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="As one of the top automobile detailerz, we do everything from straightforward car washing to opulent detailing that includes dent repair and painting. Let's brighten your car !!!"> 
-	<meta name="keywords" content="Car Detailerz, Car Washing, Car Polishing, AutoBright Detailerz, autobrightdetilerz.com, shampoo washing, ceramic coating, painting, Denting">
+	<meta name="keywords" content="car detailerz, car washing, car polishing, auto bright detailerz, autobrightdetilerz, autobright detilerz,shampoo washing, ceramic coating, painting, Denting, dent repair, scratch repair">
 	<meta name="Author" content="WebThemez"> 
     <title>Auto Bright Detailerz | Professional Car Wash & Detailing</title>
 	<link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
