--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@ To get a vehicle in the best condition it can be in, an extensive process called
                     <b>Let's give your car a fresh makeover.
 </b>
 					<ul>
-                            <li><i class="fa fa-home"></i>Velanparambu Road, Pravoor Kavala, Aluva</li>
+                            <li><i class="fa fa-home"></i>Near Federalbank, Pravoor Kavala, Aluva-683108</li>
                             <li><i class="fa fa-phone"></i>+91 7012230372</li>
-                            <li><i class="fa fa-envelope-o"></i>info@autobrightdetailerz.com</li>
+                           <!--  <li><i class="fa fa-envelope-o"></i>info@autobrightdetailerz.com</li> -->
                         </ul> 
                 </div>
             </div>
@@ -456,7 +456,7 @@ To get a vehicle in the best condition it can be in, an extensive process called
                             <a href="https://www.facebook.com/AB-CAR-SPA-109820184076308" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="https://instagram.com/ab_spray__painting?igshid=YmMyMTA2M2Y=" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/autobrightdetailerz/" target="_blank"><i class="fa fa-instagram"></i></a>
                         </li>
                         
                     </ul>
