--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ To get a vehicle in the best condition it can be in, an extensive process called
                     <b>Let's give your car a fresh makeover.
 </b>
 					<ul>
-                            <li><i class="fa fa-home"></i>Near Federalbank, Pravoor Kavala, Aluva-683108</li>
+                            <li><i class="fa fa-home"></i>Near Federal Bank, Pravoor Junction, Aluva, PIN: 683108</li>
                             <li><i class="fa fa-phone"></i>+91 7012230372</li>
                            <!--  <li><i class="fa fa-envelope-o"></i>info@autobrightdetailerz.com</li> -->
                         </ul> 
