--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ To get a vehicle in the best condition it can be in, an extensive process called
         <div class="container">
             <div class="row footer-containertent">
                 <div class="col-md-4">
-				<img src="images/logo3.png" alt="">
+				<img src="images/logo.png" alt="">
                   <p> </p>
                  <p>Being a leading automobile detailerz we give expert, first-rate service with a satisfaction guarantee. Let's make your car more colourful!!!
 </p>
