--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h2><span class="highlight-text">SERVICES</span></h2>
                    
                     <p class="col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">
-To get a vehicle in the best condition it can be in, an extensive process called detailing is used.We offer a variety of detailing packages to cater to specific customer needs.</p>
+At Autobright Detailerz, we specialize in premium car detailing services designed to bring out the best in your vehicle. With a passion for perfection and an eye for detail, our expert team uses high-quality products and cutting-edge techniques to restore, protect, and enhance your car’s appearance. Whether it’s a full interior deep clean, paint correction, or ceramic coating, we’re committed to delivering showroom-worthy results every time. At Autobright Detailerz, your car’s shine is our pride.</p>
                 </div>
                 <!-- Section Header End -->
  
