--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ At Autobright Detailerz, we specialize in premium car detailing services designe
                 </div>
                 <div class="col-md-4">
                     <h4>WE OFFER</h4>
-                    <p>Car wash, Interior and Exterior Cleaning and Shampoo Wash, Dent Repair, Paint Correction, Waxing & Polishing, Roof Painting, Ceramic Coating, Clear Coating and more....</p>
+                    <p>Car wash,  Shampoo Wash, Interior and Exterior Cleaning, Dent Repair, Paint Correction, Waxing & Polishing, Roof Painting, Ceramic Coating, Graphite coating, Nano Diamond coating, Borophine coating, PPFand more....</p>
                 </div>
                 <div class="col-md-4 contac-us">
                     <h4>CONTACT US</h4>
